# Bentley-Showcase

./: .env.example  .gitignore  .replit  ARCHITECTURE_RULES.md  BACKEND.md  BACKEND_DEPLOYMENT.md  CLOUDFLARE_DEPLOY.md  DEPLOYMENT.md  README.md  package-lock.json  package.json  pyproject.toml  schema.sql  tsconfig.json  vercel.json  vite.config.ts  wrangler.toml
.github/workflows/: deploy-cloudflare.yml  verify.yml
api/: _data.js  bootstrap.js  smoke.js  status.js
api/actions/: content.js  index.js
api/activity/: index.js
api/agent/: chat.js
api/audit/: index.js
api/catalog/: index.js
api/content/: index.js
api/deployments/: index.js
api/entities/: index.js
api/events/: logs.js
api/genesis/: index.js
api/health/: index.js
api/integrations/: index.js
api/itwin/: models.js
api/jobs/: index.js  summary.js
api/projects/: index.js
api/runtime/: index.js
api/team/: index.js
api/webhooks/: inbound.js
app/: layout.js  page.js
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: Sidebar.tsx
client/src/lib/: api.ts
client/src/pages/: AutomationEnv.tsx  Dashboard.tsx  DevelopmentEnv.tsx  Events.tsx  IModels.tsx  ITwins.tsx  Infrastructure.tsx  Integrations.tsx  MarketingEnv.tsx  MobileAlarms.tsx  PlatformSettings.tsx  WebsiteStudio.tsx
scripts/: architecture_guard.py  backend_config_validator.py  cloudflare_finalize.py  production_readiness_check.py  render_wrangler.py
src/: entry.py
