[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bentley-showcase-worker"
version = "1.0.0"
description = "Bentley Showcase Enterprise SaaS Backend - Cloudflare Workers + FastAPI"
readme = "BACKEND.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "GEM Cybersecurity", email = "support@bentley-showcase.example"}
]
keywords = ["cloudflare", "workers", "fastapi", "saas", "backend"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "workers-py >= 1.9.2",
  "fastapi >= 0.104.1",
  "pydantic >= 2.5.0",
  "asgiref >= 3.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest >= 7.4.0",
  "pytest-asyncio >= 0.21.0",
  "black >= 23.0.0",
  "ruff >= 0.0.280",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
